<resources>
    <string name="app_name">TodoList Task</string>
    <string name="search">Search</string>
</resources>
