<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="5dp" >

    <TextView
        android:id="@+id/todo_item_ctv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
android:layout_weight="1"
        >
    </TextView>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/todo_checkbox"


        />

    <!--<TextView-->


        <!--android:layout_width="wrap_content"-->

        <!--android:layout_height="wrap_content"-->
        <!--android:id="@+id/whatv"-->

        <!--android:text="jmxvkfmkdfmkdfvkmdfbkmdbkmdbkkdbm">-->
    <!--</TextView>-->

</LinearLayout>